# OCR_S3

./: .gitignore  CMakeLists.txt  Makefile  NeuralNetwork.h  README.md  builtin.c  builtin.h  char_detect.c  char_detect.h  color_system.c  demo.c  gtk_main.c  image_system.c  include_ocr.h  main.c  mot_fr_lower.txt  neural_main.c  ui_ocr.glade
NeuralNetwork/: BackProp.c  BackProp.h  FileManagment.c  FileManagment.h  ForwardProp.c  LearningTest.c  Makefile  NeuralNetworkOCR.c  NeuralNetworkTools.c  NeuralNetworkTools.h  Train.c  learning.c  learning.h  read.c  read.h
NeuralNetwork/headers/: BackProp.h  ForwardProp.h  LearningTest.h  NeuralNetworkTools.h  learning.h  read.h
NeuralNetwork/reading/: read.c  read.h
NeuralNetworks/: BackPropagation.c  BackPropagation.h  BuiltinsNeuralNetworks.c  BuiltinsNeuralNetworks.h  FileManagment.c  FileManagment.h  Makefile  NeuralNetwork.c  NeuralNetwork.h
POCXorNeuralNetwork/: BackPropagation.h  BuiltinsNeuralNetworks.c  BuiltinsNeuralNetworks.h  DemoNeuralNetwork.c  DemoNeuralNetwork.h  FileManagment.h  Makefile
character_detection/: block.c  char.c  char_detect.c  char_detect.h  character_detection.c  character_detection.h  correction.c  line.c  line_analyser.c  rlsa.c  segmentation.c
character_detection/headers/: segmentation.h
database_spellchecker/: mot_fr.txt
image_preprocessing/: binarization.c  convolution.c  grayscale.c  image_tools.c  median.c  pixel_operations.c  preprocessing.c  rotation.c
image_preprocessing/headers/: preprocessing.h
image_system/: binarization.c  color_system.c  color_system.h  image_manipulation.c  image_manipulation.h  image_system.c  image_system.h
reading/: read.c
spell_checker/: spell_checker.c  spell_checker.h
src/: main.c
src/NeuralNetwork/: BackProp.c  FileManagment.c  ForwardProp.c  LearningTest.c  NeuralNetworkTools.c  Train.c  learning.c  read.c
src/NeuralNetwork/headers/: NeuralNetworkTools.h  Train.h  learning.h  read.h
src/character_detection/: char.c  line.c  line_analyser.c  segmentation.c
src/character_detection/headers/: segmentation.h
src/image_preprocessing/: convolution.c  grayscale.c  image_tools.c  median.c  preprocessing.c  rotation.c
src/image_preprocessing/headers/: preprocessing.h
src/spell_checker/: spell_checker.c
src/type/: data.c  data.h  pixel.c
src/ui/: ui.c  ui.h
src/useful/: builtin.c  builtin.h
type/: data.c  data.h  pixel.c  pixel.h
ui/: ui.c  ui.h
useful/: builtin.c  builtin.h  test_resize.c  test_resize.h
useless/: demo.c  demo.h
